2014-06-11 <JDT>
   Changing copy() to create() in NjettinessDefinition for "new" clarity
   Converted some SharedPtr to regular pointers in NjettinessDefinition to be consistent on meaning of "create" commands.
2014-06-10 <JDT>
   Slight modification of example_advanced_usage
   Fixed bug in GeometricCutoffMeasure (incorrect denominator setting)
2014-06-05 <JDT>
   Moved public before private in the .hh files for readability
   Starting process of switching to SharedPtr internally
   Clean up of AxesFinderFromGeometricMinimization
   Simplified AxesFinder interface such that it doesn't know about starting axes finders (this is now handled in Njettiness).
   Added const qualifiers in Njettiness
2014-06-04 <JDT>
   Implemented AxesDefinition class
   Added descriptions to AxesDefinition and MeasureDefinition
   Simplified example_advanced_usage with new Definitions
   Made copy constructor private for Njettiness, to avoid copying 
2014-06-03 <JDT>
   Implemented remaining suggestions from FJ authors (Thanks!)
   Fixed bug in example_advanced_usage where wrong beta value was used for NjettinessPlugin tests.
   Removed NANs as signals for number of parameters in Nsubjettiness and NjettinessPlugin
   Reduced the number of allowed parameters from 4 to 3.
   Wrapped NEWS to 80 characters
   Added MeasureDefinition as way to safely store information about the measures used
   Converted a few NANs to std::numeric_limits<double>::quiet_NaN() when a parameter shouldn't be used.
   Added AxesStruct and MeasureStruct to simplify the form of example_advanced_usage
   Added example_v1p0p3 to check for backwards compatibility with v1.0.3
   Changed the names of the MeasureFunctions in order to avoid conflicts with the new MeasureDefinitions
   Fixed bug in correlation between subjets and tau values in NjettinessPlugin
   Added currentTauComponents to Nsubjettiness
   Added subTau information to example_basic_usage
   Added file NjettinessDefinition to hold MeasureDefinition